--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "shadowdriverjs-init": "index.js"
   },
   "dependencies": {
+    "boxen": "^7.1.1",
     "chalk": "^2.4.2",
     "commander": "^11.1.0",
-    "glob": "^10.3.10"
+    "figlet": "^1.8.0",
+    "glob": "^10.3.10",
+    "gradient-string": "^2.0.2",
+    "ora": "^5.4.1"
   }
 }
