--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "shadowdriver-initializer, for creating templates and project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"NONE\""
+    "test": "echo \"NONE\"",
+    "patch": "npm version patch"
   },
   "keywords": [
     "shadowdriverJS",
@@ -15,6 +16,13 @@
   "bin": {
     "shadowdriverjs-init": "index.js"
   },
+  "files": [
+    "index.js",
+    "client_files/**",
+    "lib/**",
+    "templates/**",
+    "README,md"
+  ],
   "dependencies": {
     "boxen": "^7.1.1",
     "chalk": "^2.4.2",
