--- a/jenkinsfiles/Jenkinsfile
+++ b/jenkinsfiles/Jenkinsfile
@@ -1,12 +1,12 @@
 pipeline {
     agent any
     tools {
-        nodejs 'NodeJS' // Ensure NodeJS is configured in Jenkins Global Tool Configuration
+        nodejs 'NodeJS'
     }
     environment {
-        GIT_REPO = 'git@github.com:noodlescripter/shadowdriver-init.git' // SSH configured in master Jenkins
+        GIT_REPO = 'git@github.com:noodlescripter/shadowdriver-init.git'
         BRANCH = 'develop'
-        NPM_TOKEN = credentials('npm-token')  // Retrieve npm token from Jenkins credentials
+        NPM_TOKEN = credentials('npm-token')
     }
     parameters {
         string(name: 'VERSION', defaultValue: '1.0.0', description: 'Version of the npm package to publish')
@@ -18,48 +18,58 @@ pipeline {
                 git branch: "${BRANCH}", url: "${GIT_REPO}"
             }
         }
+
+        stage('checkout new branch') {
+            steps {
+                script {
+                    // Using v- prefix instead of release/ to avoid the conflict
+                    sh """
+                        git config user.email 'jenkins@your-domain.com'
+                        git config user.name 'Jenkins'
+                        git checkout -b v-${params.VERSION}
+                    """
+                }
+            }
+        }
+        
         stage('Install Dependencies') {
             steps {
                 script {
-                    // Install dependencies
-                    sh 'npm install'
+                    sh 'npm ci'
                 }
             }
         }
+        
         stage('Update Version') {
             steps {
                 script {
-                    // Update the version in package.json
-                    sh "npm version ${params.VERSION} --no-git-tag-version"
+                    sh "npm --no-git-tag-version version ${params.VERSION}"
                 }
             }
         }
-        stage('Publish to npm') {
-            steps {
-                script {
-                    // Create .npmrc file for authentication
-                    writeFile file: '.npmrc', text: "//registry.npmjs.org/:_authToken=${NPM_TOKEN}"
-                    // Publish the package
-                    sh 'npm publish'
-                }
-            }
-        }
+        
         stage('Push to repo') {
             steps {
                 script {
-                    // Create a new branch and push the release
-                    sh "git checkout -b ${params.VERSION}"
-                    sh 'git add .'
-                    sh "git commit -m '${params.VERSION} release attempted'"
-                    sh "git push origin ${params.VERSION}"
+                    sh """
+                        git add package.json package-lock.json
+                        git commit -m 'Release version ${params.VERSION}'
+                        git push origin v-${params.VERSION}
+                    """
                 }
             }
         }
     }
+    
     post {
-        always {  // Use 'always' to ensure cleanup runs regardless of success or failure
-            // Clean up the .npmrc file after use
-            sh 'rm -f .npmrc'
+        always {
+            cleanWs()
+        }
+        failure {
+            echo 'Pipeline failed! Check the logs for details.'
+        }
+        success {
+            echo 'Pipeline completed successfully!'
         }
     }
 }
