--- a/.github/workflows/shadowdriverjs-init_release.yml
+++ b/.github/workflows/shadowdriverjs-init_release.yml
@@ -28,4 +28,4 @@ jobs:
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.RELEASE_KEY}}
+          NPM_RELEASE_TOKEN: ${{secrets.RELEASE_KEY}}
