--- a/.github/workflows/shadowdriverjs-init_release.yml
+++ b/.github/workflows/shadowdriverjs-init_release.yml
@@ -28,4 +28,4 @@ jobs:
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.SHADOWDRIVERJS_INIT_TOKEN}}
+          NODE_AUTH_TOKEN: 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
