--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,12 +1,10 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
-
 name: Node.js Package
-
 on:
   release:
     types: [created]
-
+  workflow_dispatch: # Allow manual triggering of the workflow
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,7 +15,6 @@ jobs:
           node-version: 20
       - run: npm ci
       - run: npm test
-
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
@@ -30,4 +27,4 @@ jobs:
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NODE_AUTH_TOKEN: ${{ secrets.npm_token }} # Ensure you have this secret set
