--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -27,4 +27,4 @@ jobs:
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} # Ensure you have this secret set
+          NODE_AUTH_TOKEN: ${{ secrets.SHADOWDRIVER_INIT_RELEASE }} # Ensure you have this secret set
