updated and attempt to release from jenkins

--- a/jenkinsfiles/Jenkinsfile
+++ b/jenkinsfiles/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
     environment {
         GIT_REPO = 'git@github.com:noodlescripter/shadowdriver-init.git'
         BRANCH = 'develop'
-        NPM_TOKEN = credentials('npm-token')
+        NPM_TOKEN = credentials('shadowdriver-init-release-token')
     }
     parameters {
         string(name: 'VERSION', defaultValue: '1.0.0', description: 'Version of the npm package to publish')
@@ -48,6 +48,21 @@ pipeline {
             }
         }
         
+        stage('Publish to NPM') {
+            steps {
+                script {
+                    // Create .npmrc file with token
+                    writeFile file: '.npmrc', text: "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}"
+                    
+                    // Publish to NPM
+                    sh """
+                        npm publish
+                        rm -f .npmrc
+                    """
+                }
+            }
+        }
+
         stage('Push to repo') {
             steps {
                 script {
@@ -59,6 +74,8 @@ pipeline {
                 }
             }
         }
+
+        
     }
     
     post {
